fix photo formatting to align with title

--- a/app/assets/stylesheets/override.css
+++ b/app/assets/stylesheets/override.css
@@ -19,7 +19,7 @@ body {
 }
 
 .photo {
-	padding-top: 30px;
+	padding-top: 25px;
 }
 
 .center {
@@ -53,5 +53,5 @@ body {
 }
 
 #body-list {
-	padding-left: 18px;
+	padding-left: 17px;
 }
